sample/error/eval_zero-div_mod.bfr
let _ = 123 mod 0

codegen []